--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -26,7 +26,7 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
-"Crypto Value:" breaks for altcoin values, with VERY LARGE Bitcoin amounts.
+Refactoring auto-install script to included changing / removing PHP-FPM versions
 
 
 Consolidate number_to_string() calls, to speed up runtime.
