--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4234,6 +4234,19 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 
+-------------------------------------------------------------------
+4.24.0:
+
+-Improved / fine-tuned random color generation for multi-item charts
+
+-Code cleanup
+
+-Misc UX
+
+-------------------------------------------------------------------
+
+
+
 
 
 
